@@ -1,3 +1,7 @@
+2020-05-17  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* includes/x/w/dim_arg.H: gcc 10 update.
+
 2020-05-06  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* listlayoutmanager: Home/End in a list navigation.
